<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:background="@color/colorAccent"
        android:text="@string/tr_ng_th_i_c_ng_vi_c"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/h_y_vi_t_l_i_n_i_dung_c_ng_vi_c"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txtNdCVdialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/n_i_dung_c_ng_vi_c1"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent"
        android:textStyle="italic" />

    <CheckBox
        android:layout_marginTop="10dp"
        android:id="@+id/checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ho_n_th_nh" />


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">
        <Button
            android:layout_gravity="center"
            android:layout_marginRight="30dp"
            android:background="@drawable/selector1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ch_a_b_o_l_i_sau_5_ph_t"
            android:id="@+id/btnSleepdialog"



            />
        <Button
            android:layout_gravity="center"
            android:background="@drawable/selector1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OK.Tắt báo thức"
            android:id="@+id/btnTatBTdialog"

            />
</LinearLayout>



</LinearLayout>