<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnHenGio"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="11dp"
        android:background="@color/colorAccent"
        android:textSize="4sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtNdCV"
        android:layout_marginTop="12dp"
        android:background="@color/colorAccent"
        android:textSize="4sp" />

    <Button
        android:id="@+id/btnHenGio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnTatBT"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/selectormain"
        android:text="@string/h_n_gi"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnTatBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:background="@drawable/selectormain1"
        android:gravity="center"
        android:text="@string/t_t_b_o_th_c"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/ng_d_ng_nh_c_vi_c"
        android:textColor="@color/colorPrimary"
        android:textSize="26sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnChangeTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="31dp"
        android:layout_toStartOf="@+id/btnHenGio"
        android:text="@string/ch_n_gi1"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp" />

    <TextView
        android:layout_marginRight="16dp"
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnChangeTime"
        android:layout_alignParentEnd="true"
        android:text="@string/abc"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnChangeTime"
        android:background="@color/colorAccent"
        android:textSize="4sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="14dp"
        android:text="@string/t_n_c_ng_vi_c"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/txtTenCV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:hint="@string/nh_p_t_n_c_ng_vi_c"
        android:onClick="btnTenCVdialog"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView4"
        android:layout_below="@+id/txtTenCV"
        android:layout_marginEnd="21dp"
        android:layout_marginTop="34dp"
        android:text="@string/n_i_dung_c_ng_vi_c"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtNdCV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignStart="@+id/btnTatBT"
        android:ems="10"
        android:hint="@string/nh_p_n_i_dung_c_ng_vi_c"
        android:onClick="btnNDCVdialog"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtChiTiet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="36dp"
        android:textAllCaps="false"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:text="@string/c_ng_vi_c_t_o"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>
